kfileutils: compare to basename in makeSuggestedName

Instead of searching from oldName, search from baseName since that is what
we want to modify anyway.

When searching from oldName here and then modifying baseName, with
weird filenames like "super.weird.filename(123).txt(54321)" it gets
stuck in endless loop.

This also adds a test for above filename. The regex has an added space before
the parentheses match, since the number we append also has a space in front of it.

BUG:493270